--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,7 @@
     <title>Forge IDE</title>
     <link href="style/default.css" rel="stylesheet" type="text/css"/>
     <link href="style/tree.css" rel="stylesheet" type="text/css"/>
+    <link rel="shortcut icon" type="image/png" href="forge-icon.png"/>
     <script src="xwidgets/xw.js"></script>
     <script src="xwidgets/org/xwidgets/core/tree.js"></script>
   </head>
