add basic structure for rest binding component

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,6 +8,8 @@
     <script src="xwidgets/xw.js"></script>
     <script src="xwidgets/org/xwidgets/core/tree.js"></script>
     <script src="xwidgets/org/xwidgets/core/button.js"></script>
+    <script src="xwidgets/org/xwidgets/core/restendpoint.js"></script>
+    <script src="xwidgets/org/xwidgets/core/restelbinding.js"></script>
   </head>
 
   <body>
