initial implementation of command UI interface

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,6 +17,9 @@
     <script src="xwidgets/org/xwidgets/core/restendpoint.js"></script>
     <script src="xwidgets/org/xwidgets/core/restelbinding.js"></script>
     <script src="xwidgets/org/xwidgets/core/menubar.js"></script>
+
+    <script src="xwidgets/org/xwidgets/core/elbinding.js"></script>    
+    <script src="xwidgets/org/xwidgets/core/repeat.js"></script>
     
     <script src="script/forgeide.js"></script>
   </head>
