moved views to WEB-INF/views dir

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,7 +33,11 @@
     <div id="ide">
       <xw:view name="ide.xw"/>
     </div>
+    
+    <script type="text/javascript">
+      xw.viewPath = "views/";
+    </script>
 
-  </body>   
+  </body>
 
 </html>
