--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -39,6 +39,7 @@
 
     <div class="header">
       <div id="logo"></div>
+      <div id="ajax"><i class="fa fa-refresh fa-spin"></i></div>
     </div>
     
     <div id="ide">
