increased the prettiness of the command UI during command execution

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,6 +18,8 @@
     <link rel="shortcut icon" type="image/png" href="forge-icon.png"/>
 
     <script src="xwidgets/xw.js"></script>
+    <script src="xwidgets/org/xwidgets/core/restendpoint.js"></script>
+    
     
     <script src="script/forgeide.js"></script>
   </head>
