added result metadata and return from command execution, improvements to command UI

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,6 +19,9 @@
 
     <script src="xwidgets/xw.js"></script>
     <script src="xwidgets/org/xwidgets/core/restendpoint.js"></script>
+    <script src="xwidgets/org/xwidgets/core/form.js"></script>
+    <script src="xwidgets/org/xwidgets/core/inputtext.js"></script>
+    <script src="xwidgets/org/xwidgets/core/select.js"></script>
     
     
     <script src="script/forgeide.js"></script>
