--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,6 +31,7 @@
     
     <!--script src="xwidgets/org/xwidgets/core/menubar.js"></script-->
     <!--script src="xwidgets/org/xwidgets/core/menuitem.js"></script-->
+    <script src="xwidgets/org/xwidgets/core/popupmenu.js"></script>
     
     <script src="script/forgeide.js"></script>
   </head>
