support creating of new project directory resources

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,7 +30,7 @@
     <script src="xwidgets/org/xwidgets/core/websocket.js"></script>
     
     <!--script src="xwidgets/org/xwidgets/core/menubar.js"></script-->
-    <!--script src="xwidgets/org/xwidgets/core/menuitem.js"></script-->
+    <script src="xwidgets/org/xwidgets/core/menuitem.js"></script>
     <script src="xwidgets/org/xwidgets/core/popupmenu.js"></script>
     
     <script src="script/forgeide.js"></script>
