removed picketlink script, use script provided by pl rest module

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,7 @@
     <link href="style/menu.css" rel="stylesheet" type="text/css"/>
     <link rel="shortcut icon" type="image/png" href="forge-icon.png"/>
 
-    <script src="script/picketlink.js"></script>
+    <script src="rest/script/picketlink" type="text/javascript"></script>
     <script src="xwidgets/xw.js"></script>
     
     <!-- Individual widget sources loaded for debugging purposes only - delete for final release! -->
