--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,6 +35,8 @@
     <!--script src="xwidgets/org/xwidgets/core/menubar.js"></script-->
     <script src="xwidgets/org/xwidgets/core/menuitem.js"></script>
     <script src="xwidgets/org/xwidgets/core/popupmenu.js"></script>
+
+    <script src="xwidgets/org/picketlink/identity.js"></script>
     
     <script src="script/forgeide.js"></script>
   </head>
