minor style adjustment, fixed fragment rendering

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,8 +35,10 @@
     <!--script src="xwidgets/org/xwidgets/core/menubar.js"></script-->
     <script src="xwidgets/org/xwidgets/core/menuitem.js"></script>
     <script src="xwidgets/org/xwidgets/core/popupmenu.js"></script>
+    <script src="xwidgets/org/xwidgets/core/fragment.js"></script>
 
     <script src="xwidgets/org/picketlink/identity.js"></script>
+
     
     <script src="script/forgeide.js"></script>
   </head>
