added tabs to tab panel control, adjusted header styles

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,6 +38,8 @@
     <script src="xwidgets/org/xwidgets/core/fragment.js"></script>
     <script src="xwidgets/org/xwidgets/core/splitter.js"></script>
     
+    <script src="xwidgets/org/xwidgets/core/tabpanel.js"></script>
+    
     <script src="xwidgets/ace/ace-full.js"></script>
 
     <script src="xwidgets/org/xwidgets/core/codeeditor.js"></script>
