--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,8 +6,8 @@
     <title>Forge IDE</title>
     
     <!-- purecss.io -->
-    <link rel="stylesheet" href="http://yui.yahooapis.com/combo?pure/0.4.2/base-min.css&pure/0.4.2/buttons-min.css&pure/0.4.2/forms-min.css">
-    
+    <link href="style/forms-min.css" rel="stylesheet" type="text/css"/>
+
     <link href="style/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <link href="style/forms.css" rel="stylesheet" type="text/css"/>
     <link href="style/default.css" rel="stylesheet" type="text/css"/>
