--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,6 +23,7 @@
     <script src="xwidgets/org/picketlink/identity.js" type="text/javascript"></script>
     
     <script src="xwidgets/org/xwidgets/core/multiselection.js" type="text/javascript"></script>
+     <script src="xwidgets/org/xwidgets/core/repeat.js" type="text/javascript"></script>
     
     <script src="script/forge.js" type="text/javascript"></script>
   </head>
