--- a/src/main/webapp/ide.html
+++ b/src/main/webapp/ide.html
@@ -27,7 +27,7 @@
     <xw:datamodule name="dm_ide.xw"></xw:datamodule>
 
     <div class="header">
-      <div id="auth"><xw:view name="auth.xw"></xw:view></div>
+      <!--div id="auth"><xw:view name="auth.xw"></xw:view></div-->
       <div id="ajax"><i class="fa fa-refresh fa-spin"></i></div>
     </div>
     
