refactor rest endpoints

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,6 +25,7 @@
     <script src="xwidgets/org/xwidgets/core/ellistener.js" type="text/javascript"></script>
     <script src="xwidgets/org/xwidgets/core/multiselect.js" type="text/javascript"></script>
     <script src="xwidgets/org/xwidgets/core/repeat.js" type="text/javascript"></script>
+    <script src="xwidgets/org/xwidgets/core/restendpoint.js" type="text/javascript"></script>
     
     <script src="script/forge.js" type="text/javascript"></script>
   </head>
