--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,7 +29,7 @@
     <script src="xwidgets/org/xwidgets/core/restendpoint.js" type="text/javascript"></script>
     <script src="xwidgets/org/xwidgets/core/restelbinding.js" type="text/javascript"></script>
     
-    <script src="script/forge.js" type="text/javascript"></script>
+    <script src="script/xpaas.js" type="text/javascript"></script>
   </head>
   <body>
   
