move xwidget theming to xwidgets core

--- a/src/main/webapp/ide.html
+++ b/src/main/webapp/ide.html
@@ -20,6 +20,9 @@
     <script src="xwidgets/xw.js"></script>
     
     <!-- Individual widget sources loaded for debugging purposes only - delete for final release! -->
+    
+    <script src="xwidgets/org/xwidgets/core/menuitem.js"></script>
+    <script src="xwidgets/org/xwidgets/core/menubar.js"></script>
   
     <script src="script/forge.js"></script>
   </head>
