updated to use xwidgets default style

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,9 +11,8 @@
     <link href="style/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <link href="style/forms.css" rel="stylesheet" type="text/css"/>
     <link href="style/default.css" rel="stylesheet" type="text/css"/>
+    <link href="xwidgets/theme/default/xw.css" rel="stylesheet" type="text/css"/>
     
-    <link href="style/tree.css" rel="stylesheet" type="text/css"/>
-    <link href="style/menu.css" rel="stylesheet" type="text/css"/>
     <link rel="shortcut icon" type="image/png" href="forge-icon.png"/>
 
     <!-- scripts -->
