--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,8 +17,16 @@
 
     <!-- scripts -->
     <script src="rest/script/picketlink.js" type="text/javascript"></script>
+
+    <!-- Override logout path -->
+    <script type="text/javascript">
+      pl.PATH_LOGOUT = "/picketlink/logout";
+    </script>
+
     <script src="xwidgets/xw.js" type="text/javascript"></script>   
     <script src="script/xpaas.js" type="text/javascript"></script>
+    
+    <script src="xwidgets/org/xwidgets/core/zone.js" type="text/javascript"></script>  
   </head>
   <body>
   
